; ModuleID = '/home/carl/AnghaBench/esp-idf/examples/bluetooth/nimble/blecent/main/extr_peer.c_peer_disc_complete.c'
source_filename = "/home/carl/AnghaBench/esp-idf/examples/bluetooth/nimble/blecent/main/extr_peer.c_peer_disc_complete.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.peer = type { i32, i32 (%struct.peer*, i32, i32)*, i64 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.peer*, i32)* @peer_disc_complete to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @peer_disc_complete(%struct.peer* %0, i32 %1) #0 {
  %3 = alloca %struct.peer*, align 8
  %4 = alloca i32, align 4
  store %struct.peer* %0, %struct.peer** %3, align 8
  store i32 %1, i32* %4, align 4
  %5 = load %struct.peer*, %struct.peer** %3, align 8
  %6 = getelementptr inbounds %struct.peer, %struct.peer* %5, i32 0, i32 2
  store i64 0, i64* %6, align 8
  %7 = load %struct.peer*, %struct.peer** %3, align 8
  %8 = getelementptr inbounds %struct.peer, %struct.peer* %7, i32 0, i32 1
  %9 = load i32 (%struct.peer*, i32, i32)*, i32 (%struct.peer*, i32, i32)** %8, align 8
  %10 = icmp ne i32 (%struct.peer*, i32, i32)* %9, null
  br i1 %10, label %11, label %21

11:                                               ; preds = %2
  %12 = load %struct.peer*, %struct.peer** %3, align 8
  %13 = getelementptr inbounds %struct.peer, %struct.peer* %12, i32 0, i32 1
  %14 = load i32 (%struct.peer*, i32, i32)*, i32 (%struct.peer*, i32, i32)** %13, align 8
  %15 = load %struct.peer*, %struct.peer** %3, align 8
  %16 = load i32, i32* %4, align 4
  %17 = load %struct.peer*, %struct.peer** %3, align 8
  %18 = getelementptr inbounds %struct.peer, %struct.peer* %17, i32 0, i32 0
  %19 = load i32, i32* %18, align 8
  %20 = call i32 %14(%struct.peer* %15, i32 %16, i32 %19)
  br label %21

21:                                               ; preds = %11, %2
  ret void
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
